(library
 (name procs_core_ops)
 (wrapped false)
 (modules core_sig core_ops))

(library
 (name procs_bucket)
 (wrapped false)
 (modules bucket)
 (libraries procs_core_ops))

(library
 (name procs_procs)
 (wrapped false)
 (modules mem_profile multiThreadedCall multiWorker worker workerController)
 (libraries
  ;core_kernel
  ;heap_shared_mem
  ;logging
  ;marshal_tools
  procs_bucket
  ;procfs
  ;relative_path
  ;sys_utils
  ;utils_exit
  ;worker_cancel
  ))

(library
 (name procs_entry_point)
 (wrapped false)
 (modules workerControllerEntryPoint)
 (libraries procs_procs))
